libs/image/layerstyles/kis_layer_style_filter_projection_plane.h
@@ -45,6 +45,13 @@ public:
 
     KisPaintDeviceList getLodCapableDevices() const override;
 
+    /**
+     * \returns true if a call to apply() will actually paint anything. Basically,
+     * it is a cached version of isEnabled(), though the state may change after calling
+     * to recalculate().
+     */
+    bool isEmpty() const;
+
 private:
     struct Private;
     const QScopedPointer<Private> m_d;
