libs/image/layerstyles/kis_ls_overlay_filter.h
@@ -23,7 +23,6 @@
 
 #include "kis_layer_style_filter.h"
 #include <kritaimage_export.h>
-#include "kis_cached_paint_device.h"
 
 struct psd_layer_effects_overlay_base;
 
@@ -64,7 +63,6 @@ private:
 
 private:
     Mode m_mode;
-    mutable KisCachedPaintDevice m_cachedDevices;
 };
 
 #endif
